# ROS-Bootcamp

./: README.md  Training Day 4 - Lesson_Finalized.ppt  Tutorial 1.odt  Tutorial_4_August_Finalized.doc
day3_ws/: tutorial3_day3.doc  tutorial3_day3.odt
day3_ws/src/cv_basics/: setup.py
day3_ws/src/cv_basics/cv_basics/: webcam_pub.py
day3_ws/src/ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
day3_ws/src/tut3/: Tutorial_3_August (copy).doc  Tutorial_3_August.doc  package.xml  setup.cfg  setup.py
day3_ws/src/tut3/launch/: tut3.launch  tut3.launch.py
day3_ws/src/tut3/tut3/: ar_id_node_template.py  ar_tracking_template.py  tutorial3node.cpp
my_packagae/: package.xml  setup.cfg  setup.py
pubsub/: package.xml  setup.py
pubsub/pubsub/: pub_spiral.py
src/: .~lock.Tutorial_4_August_Finalized.doc#
src/cv_basics/: package.xml
src/cv_basics/cv_basics/: webcam_sub.py
src/ros2_aruco/ros2_aruco/ros2_aruco/: aruco_node.py
src/tut4/: package.xml  setup.cfg  setup.py
src/tut4/launch/: competition.launch.py
src/tut4/map/: map.pgm  map.yaml
src/tut4/models/wall/: maze.sdf  model.config
src/tut4/tut4/: ar_tracking.py  final.sh  maze_solver_template.py
src/tut4/worlds/: competition.model
test_package/: package.xml  setup.py
